# stackd

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  PLAN_A_UPDATE.md  PLAN_A_UPDATE.md.done  PLAN_B_UPDATE.md  PLAN_B_UPDATE.md.done  PLAN_C_UPDATE.md.done  PLAN_D_UPDATE.md.done  PLAN_E_UPDATE.md  PLAN_F_UPDATE.md.done  PLAN_G_UPDATE.md  PLAN_H_UPDATE.md  PLAN_I_UPDATE.md  PLAN_UPDATE.md  README.md  SPECS_A_UPDATE.md  SPECS_B_UPDATE.md  SPECS_C_UPDATE.md.done  SPECS_D_UPDATE.md.done  SPECS_E_UPDATE.md.done  SPECS_F_UPDATE.md  SPECS_G_UPDATE.md.done  SPECS_H_UPDATE.md.done  SPECS_UPDATE.md  Taskfile.yml  index.html  mkdocs.yml  pyproject.toml
api/: Dockerfile.dev  alembic.ini  index.html  pyproject.toml
api/app/: config.py  crypto.py  db.py  enums.py  errors.py  ids.py  logging.py  main.py  permissions.py  ratelimit.py  security.py  seed.py
api/app/audit/: __init__.py  router.py  service.py
api/app/auth/: deps.py  dev.py  google.py  provisioning.py  router.py  schemas.py  sessions.py
api/app/comments/: router.py  schemas.py
api/app/dependencies/: router.py  schemas.py  service.py
api/app/drift/: service.py
api/app/environments/: router.py  schemas.py
api/app/hooks/: router.py  schemas.py
api/app/inbox/: router.py  service.py
api/app/models/: __init__.py  audit.py  dependency.py  environment.py  hook.py  notification.py  oidc.py  run.py  run_comment.py  run_log.py  secret_source.py  space.py  (+11 more)
api/e2e/: conftest.py  test_scenario.py
api/migrations/: env.py
api/tests/: conftest.py  conftest_phase2.py  test_audit.py  test_auth.py  test_commands.py  test_comments.py  test_dependencies.py  test_drift.py  test_hooks.py  test_inbox.py  test_metrics_ratelimit.py  test_notifications.py  test_observability.py  test_oidc.py  test_permissions.py  test_promote.py  test_runs.py  test_scheduler.py  test_secret_sources.py  test_seed.py  test_spaces.py  test_state_backend.py  test_tfvars.py  test_tiers.py  test_users.py  test_variables_api.py  test_vcs.py  test_webhooks.py  test_worker_diagnostics.py  test_worker_heartbeat.py  test_worker_register.py  test_ws_notify.py
worker/: Dockerfile.dev  pyproject.toml
worker/agent/: client.py  config.py  diagnostics.py  logging.py  main.py  masking.py  runner.py  workspace.py
worker/tests/: test_concurrency.py  test_diagnostics.py  test_init_cmd.py  test_masking.py  test_runner_diag.py  test_security.py  test_workspace.py
(+223 files in other folders)
