[project]
name = "stackd-worker"
version = "0.1.0"
description = "Stackd worker agent (pull model)"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "watchfiles>=1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["ruff>=0.9", "pytest>=8.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.setuptools.packages.find]
include = ["agent*"]
